--- a/bittr/Base.lproj/Main.storyboard
+++ b/bittr/Base.lproj/Main.storyboard
@@ -6241,7 +6241,7 @@
                                                                 <color key="color" red="0.96470588239999999" green="0.78039215689999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             </activityIndicatorView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97L-yK-kx9" userLabel="Label 2">
-                                                                <rect key="frame" x="328" y="18.666666666666686" width="0.0" height="10"/>
+                                                                <rect key="frame" x="304" y="18.666666666666686" width="0.0" height="10"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="TY0-Vb-gvN"/>
                                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" id="Yuk-sU-N4I"/>
@@ -6251,14 +6251,34 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconreset" translatesAutoresizingMaskIntoConstraints="NO" id="KJk-Ls-9lJ">
-                                                                <rect key="frame" x="308" y="16.666666666666686" width="12" height="12"/>
+                                                                <rect key="frame" x="284" y="16.666666666666686" width="12" height="12"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="12" id="Ip8-PK-7tm"/>
                                                                     <constraint firstAttribute="width" constant="12" id="OxD-Ms-I6x"/>
                                                                 </constraints>
                                                             </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="OBa-V6-5sp">
+                                                                <rect key="frame" x="312" y="15.333333333333352" width="16" height="14.66666666666667"/>
+                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="16" id="CVG-cq-ia7"/>
+                                                                    <constraint firstAttribute="height" constant="16" id="KSe-Ut-Eb1"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b8B-wK-nHr">
+                                                                <rect key="frame" x="300" y="2.6666666666666856" width="40" height="40"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="40" id="jd1-zl-kJS"/>
+                                                                    <constraint firstAttribute="width" constant="40" id="pFJ-DN-FTQ"/>
+                                                                </constraints>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="plain"/>
+                                                                <connections>
+                                                                    <action selector="statusQuestionTapped:" destination="SiB-n5-gpJ" eventType="touchUpInside" id="AXE-fl-dnx"/>
+                                                                </connections>
+                                                            </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udE-zm-hPz">
-                                                                <rect key="frame" x="0.0" y="0.0" width="343" height="45"/>
+                                                                <rect key="frame" x="264" y="0.0" width="52" height="45"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain"/>
                                                                 <connections>
@@ -6269,15 +6289,19 @@
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="KJk-Ls-9lJ" firstAttribute="trailing" secondItem="97L-yK-kx9" secondAttribute="leading" constant="-8" id="05r-So-Vd7"/>
-                                                            <constraint firstItem="udE-zm-hPz" firstAttribute="leading" secondItem="MT0-Qy-smQ" secondAttribute="leading" id="5no-7q-XBO"/>
+                                                            <constraint firstItem="b8B-wK-nHr" firstAttribute="centerY" secondItem="OBa-V6-5sp" secondAttribute="centerY" id="2cA-bm-RUT"/>
+                                                            <constraint firstItem="udE-zm-hPz" firstAttribute="leading" secondItem="KJk-Ls-9lJ" secondAttribute="leading" constant="-20" id="5no-7q-XBO"/>
+                                                            <constraint firstItem="b8B-wK-nHr" firstAttribute="centerX" secondItem="OBa-V6-5sp" secondAttribute="centerX" id="6RF-nm-lzT"/>
                                                             <constraint firstItem="KJk-Ls-9lJ" firstAttribute="centerY" secondItem="97L-yK-kx9" secondAttribute="centerY" constant="-1" id="9ED-QB-XlI"/>
-                                                            <constraint firstAttribute="trailing" secondItem="udE-zm-hPz" secondAttribute="trailing" id="BeF-8N-KYu"/>
+                                                            <constraint firstItem="udE-zm-hPz" firstAttribute="trailing" secondItem="KJk-Ls-9lJ" secondAttribute="trailing" constant="20" id="BeF-8N-KYu"/>
                                                             <constraint firstItem="jiC-ib-MRw" firstAttribute="centerY" secondItem="MT0-Qy-smQ" secondAttribute="centerY" constant="1" id="HXM-tB-qbU"/>
                                                             <constraint firstItem="97L-yK-kx9" firstAttribute="centerY" secondItem="MT0-Qy-smQ" secondAttribute="centerY" constant="1" id="KPg-4l-hTK"/>
                                                             <constraint firstItem="udE-zm-hPz" firstAttribute="top" secondItem="MT0-Qy-smQ" secondAttribute="top" id="L8I-iq-4Ei"/>
                                                             <constraint firstItem="jiC-ib-MRw" firstAttribute="leading" secondItem="MT0-Qy-smQ" secondAttribute="leading" constant="15" id="P6G-YB-uTU"/>
+                                                            <constraint firstAttribute="trailing" secondItem="OBa-V6-5sp" secondAttribute="trailing" constant="15" id="VDx-3D-agc"/>
+                                                            <constraint firstItem="OBa-V6-5sp" firstAttribute="centerY" secondItem="KJk-Ls-9lJ" secondAttribute="centerY" id="bZu-2g-eOo"/>
                                                             <constraint firstItem="VUt-2D-uQc" firstAttribute="centerY" secondItem="jiC-ib-MRw" secondAttribute="centerY" id="cFa-Ph-SVf"/>
-                                                            <constraint firstAttribute="trailing" secondItem="97L-yK-kx9" secondAttribute="trailing" constant="15" id="iKf-rU-Tk4"/>
+                                                            <constraint firstItem="97L-yK-kx9" firstAttribute="trailing" secondItem="OBa-V6-5sp" secondAttribute="leading" constant="-8" id="iKf-rU-Tk4"/>
                                                             <constraint firstItem="VUt-2D-uQc" firstAttribute="leading" secondItem="jiC-ib-MRw" secondAttribute="trailing" constant="8" id="ihf-YW-xhs"/>
                                                             <constraint firstAttribute="height" constant="45" id="jOE-cf-OXZ"/>
                                                             <constraint firstAttribute="bottom" secondItem="udE-zm-hPz" secondAttribute="bottom" id="yHx-mU-Sl9"/>
@@ -6470,6 +6494,8 @@
                         <outlet property="pendingView" destination="vQy-fW-Vrh" id="zTT-KW-wzI"/>
                         <outlet property="questionMark" destination="3j7-j3-zld" id="hSK-NH-nad"/>
                         <outlet property="resetIcon" destination="KJk-Ls-9lJ" id="a43-J5-0pp"/>
+                        <outlet property="statusQuestionButton" destination="b8B-wK-nHr" id="4rC-Hh-APz"/>
+                        <outlet property="statusQuestionIcon" destination="OBa-V6-5sp" id="YFI-ms-pfK"/>
                         <outlet property="subtitleLabel" destination="eK1-0s-jg5" id="tcs-gD-lQn"/>
                         <outlet property="swapIcon" destination="fml-c2-gag" id="QFW-Xp-m7e"/>
                         <outlet property="titleAmount" destination="2HC-cC-q6z" id="K9c-Yi-AER"/>
